--- a/front-end/src/i18n/locales/en/common.json
+++ b/front-end/src/i18n/locales/en/common.json
@@ -119,6 +119,84 @@
   "pages.documents.openReceipt": "Open Receipt",
   "pages.documents.deleteConfirmReceiptOrigin": "This document comes from a Treasury receipt. Deleting it will make the receipt temporary and remove its link.",
   "pages.documents.receiptResolveError": "Could not locate receipt for this document",
+  "pages.documents.deleteConfirmPaymentOrigin": "This document comes from a Treasury payment. Deleting it will make the payment draft and remove its link",
   "validation.cashboxRequired": "Cashbox is required",
-  "validation.relatedInstrumentRequired": "Related instrument is required"
+  "validation.relatedInstrumentRequired": "Related instrument is required",
+  "pages.documents.printSelected": "Print PDF",
+  "pages.documents.printFailed": "Failed to open print view",
+  "actions.new": "New",
+  "fetch.error": "Failed to fetch data",
+  "fields.date": "Date",
+  "fields.documentNumber": "Document Number",
+  "fields.description": "Description",
+  "fields.detailCode": "Detail Code",
+  "pages.reports.dynamic.title": "Notebook Reports",
+  "pages.reports.balance.title": "Balance Report",
+  "pages.reports.filters": "Filters",
+  "pages.reports.search": "Search",
+  "pages.reports.docFrom": "Doc From",
+  "pages.reports.docTo": "Doc To",
+  "pages.reports.columns": "Columns",
+  "pages.reports.groupBy": "Group By",
+  "pages.reports.pageSize": "Page Size",
+  "pages.reports.results": "Results",
+  "pages.reports.resultsPlaceholder": "Report results will appear here.",
+  "pages.reports.groupTotal": "Group Total",
+  "pages.reports.exportPdf": "Export PDF",
+  "pages.reports.exportExcel": "Export Excel",
+  "pages.reports.tabs.group": "Group",
+  "pages.reports.tabs.general": "Main",
+  "pages.reports.tabs.specific": "Special",
+  "pages.reports.tabs.detail": "Detail",
+  "pages.reports.groupHeader.count": "Count",
+  "pages.reports.table.debit": "Debit",
+  "pages.reports.table.credit": "Credit",
+  "pages.reports.table.runningBalance": "Running Balance",
+  "pages.reports.table.beforeDebit": "Before Debit",
+  "pages.reports.table.beforeCredit": "Before Credit",
+  "pages.reports.table.remainDebit": "Remain Debit",
+  "pages.reports.table.remainCredit": "Remain Credit",
+  "pages.reports.table.total": "Total",
+  "pages.reports.expandGroup": "Expand Group",
+  "pages.reports.collapseGroup": "Collapse Group",
+  "pages.reports.expandMain": "Expand Main",
+  "pages.reports.collapseMain": "Collapse Main",
+  "pages.reports.expandSpecific": "Expand Special",
+  "pages.reports.collapseSpecific": "Collapse Special"
+  ,
+  "pages.reports.statusFilter": "Status"
+  ,
+  "navigation.reports": "Reports",
+  "navigation.journalReportBuilder": "Notebook Reports",
+  "navigation.accountsReviewReport": "Accounts Review Report",
+  "navigation.balanceReport": "Balance Report",
+  "navigation.documents": "Documents",
+  "navigation.basicData": "Basic Data",
+  "navigation.codes": "Codes",
+  "navigation.details": "Details",
+  "navigation.detailLevels": "Detail Levels",
+  "navigation.fiscalYears": "Fiscal Years",
+  "navigation.treasury": "Treasury",
+  "navigation.treasuryCashboxes": "Cashboxes",
+  "navigation.treasuryManageBanks": "Manage Banks",
+  "navigation.treasuryChecks": "Manage Check",
+  "navigation.treasurySettings": "Settings",
+  "navigation.dashboard": "Dashboard",
+  "pages.reports.consolidation.enable": "Enable Consolidation",
+  "pages.reports.consolidation.targets": "Consolidate Codes",
+  "pages.reports.consolidation.withinDoc": "Consolidate Within Document",
+  "pages.reports.consolidation.rule": "Rule",
+  "pages.reports.consolidation.rule.strict": "Strict",
+  "pages.reports.consolidation.rule.relaxed": "Relaxed",
+  "pages.reports.consolidation.showTotals": "Show sum after each group",
+  "pages.reports.config.saveName": "Config name",
+  "pages.reports.config.save": "Save",
+  "pages.reports.config.selectSaved": "Saved configurations",
+  "pages.reports.config.load": "Load",
+  "pages.reports.config.delete": "Delete",
+  "pages.reports.config.saved": "Saved configuration",
+  "pages.reports.config.loaded": "Loaded configuration",
+  "pages.reports.config.deleted": "Deleted configuration",
+  "pages.reports.config.error": "Could not apply configuration",
+  "pages.reports.config.storageFull": "Storage limit reached"
 }
