--- a/front-end/src/i18n/locales/fa/common.json
+++ b/front-end/src/i18n/locales/fa/common.json
@@ -135,9 +135,90 @@
   "pages.codes.deletedCascade": "کد و همه زیرکدها حذف شدند.",
   "pages.documents.deleteConfirmReceiptOrigin": "این سند از دریافتی خزانه‌داری ایجاد شده است. با حذف آن، وضعیت دریافتی «موقت» می‌شود و ارتباطش حذف خواهد شد.",
   "pages.documents.receiptResolveError": "یافتن دریافتیِ مرتبط با این سند ممکن نیست",
+  "pages.documents.deleteConfirmPaymentOrigin": "این سند از پرداخت خزانه‌داری ایجاد شده است. با حذف آن، وضعیت پرداخت «پیش‌نویس» می‌شود و ارتباطش حذف خواهد شد",
   "pages.documents.deleteConfirm": "این سند پیش‌نویس حذف شود؟",
   "bulkPostConfirmTitle": "ارسال گروهی اسناد",
   "bulkPostConfirmMessage": "تمام اسناد انتخاب‌شده ارسال شوند؟",
   "renumberConfirmTitle": "شماره‌گذاری مجدد",
-  "renumberConfirmMessage": "شماره‌گذاری اسناد انتخاب‌شده از ابتدا انجام شود؟"
+  "renumberConfirmMessage": "شماره‌گذاری اسناد انتخاب‌شده از ابتدا انجام شود؟",
+  "pages.documents.printSelected": "چاپ PDF",
+  "pages.documents.printFailed": "نمایش چاپ سند ناموفق بود",
+  "actions.new": "جدید",
+  "fetch.error": "دریافت داده ناموفق بود",
+  "fields.date": "تاریخ",
+  "fields.documentNumber": "شماره سند",
+  "fields.description": "توضیحات",
+  "fields.detailCode": "کد تفصیل",
+  "pages.reports.dynamic.title": "گزارش دفاتر",
+  "pages.reports.balance.title": "گزارش تراز",
+  "pages.reports.filters": "فیلترها",
+  "pages.reports.search": "جستجو",
+  "pages.reports.docFrom": "از شماره سند",
+  "pages.reports.docTo": "تا شماره سند",
+  "pages.reports.columns": "ستون‌ها",
+  "pages.reports.groupBy": "گروه‌بندی بر اساس",
+  "pages.reports.pageSize": "اندازه صفحه",
+  "pages.reports.results": "نتایج",
+  "pages.reports.resultsPlaceholder": "نتایج گزارش در اینجا نمایش داده می‌شود.",
+  "pages.reports.groupTotal": "جمع گروه",
+  "pages.reports.exportPdf": "صدور PDF",
+  "pages.reports.exportExcel": "صدور Excel",
+  "pages.reports.tabs.group": "گروه",
+  "pages.reports.tabs.general": "کل",
+  "pages.reports.tabs.specific": "معین",
+  "pages.reports.tabs.detail": "تفصیل",
+  "pages.reports.groupHeader.count": "تعداد",
+  "pages.reports.table.debit": "بدهکار",
+  "pages.reports.table.credit": "بستانکار",
+  "pages.reports.table.runningBalance": "مانده جاری",
+  "pages.reports.table.beforeDebit": "گردش قبل از دوره بدهکار",
+  "pages.reports.table.beforeCredit": "گردش قبل از دوره بستانکار",
+  "pages.reports.table.remainDebit": "مانده بدهکار",
+  "pages.reports.table.remainCredit": "مانده بستانکار",
+  "pages.reports.table.total": "جمع",
+  "pages.reports.expandGroup": "بازکردن گروه",
+  "pages.reports.collapseGroup": "جمع‌کردن گروه",
+  "pages.reports.expandMain": "بازکردن کل",
+  "pages.reports.collapseMain": "جمع‌کردن کل",
+  "pages.reports.expandSpecific": "بازکردن معین",
+  "pages.reports.collapseSpecific": "جمع‌کردن معین"
+  ,
+  "pages.reports.statusFilter": "فیلتر وضعیت"
+  ,
+  "navigation.reports": "گزارش‌ها",
+  "navigation.journalReportBuilder": "گزارش دفاتر",
+  "navigation.accountsReviewReport": "گزارش مرور حساب‌ها",
+  "navigation.balanceReport": "گزارش تراز",
+  "navigation.documents": "اسناد",
+  "navigation.basicData": "اطلاعات پایه",
+  "navigation.codes": "کدها",
+  "navigation.details": "تفصیل‌ها",
+  "navigation.detailLevels": "سطوح تفصیل",
+  "navigation.fiscalYears": "سال‌های مالی",
+  "navigation.treasury": "خزانه‌داری",
+  "navigation.treasuryCashboxes": "صندوق‌ها",
+  "navigation.treasuryManageBanks": "مدیریت بانک‌ها",
+  "navigation.treasuryChecks": "مدیریت چک",
+  "navigation.treasurySettings": "تنظیمات",
+  "navigation.dashboard": "داشبورد"
+  ,
+  "pages.reports.consolidation.enable": "تجمیع فعال",
+  "pages.reports.consolidation.targets": "کدهای قابل تجمیع",
+  "pages.reports.consolidation.withinDoc": "تجمیع در هر سند",
+  "pages.reports.consolidation.rule": "قواعد تجمیع",
+  "pages.reports.consolidation.rule.strict": "سختگیرانه",
+  "pages.reports.consolidation.rule.relaxed": "سهل‌گیرانه"
+  ,
+  "pages.reports.consolidation.showTotals": "نمایش جمع هر گروه"
+  ,
+  "pages.reports.config.saveName": "نام تنظیمات",
+  "pages.reports.config.save": "ذخیره",
+  "pages.reports.config.selectSaved": "تنظیمات ذخیره‌شده",
+  "pages.reports.config.load": "بارگذاری",
+  "pages.reports.config.delete": "حذف",
+  "pages.reports.config.saved": "تنظیمات ذخیره شد",
+  "pages.reports.config.loaded": "تنظیمات بارگذاری شد",
+  "pages.reports.config.deleted": "تنظیمات حذف شد",
+  "pages.reports.config.error": "ذخیره/بارگذاری تنظیمات ناموفق بود",
+  "pages.reports.config.storageFull": "فضای ذخیره‌سازی پر شده است"
 }
